@@ -183,7 +183,10 @@ public class Main extends Applet implements MicroEmulator, DisplayComponent
       device = new AppletDevice();    
     } else {
       try {
-        device = (AppletDevice) Class.forName(deviceClassName).newInstance();
+System.out.println(deviceClassName);      	
+      	Class cl = Class.forName(deviceClassName);
+System.out.println(cl);      	
+        device = (AppletDevice) cl.newInstance();
       } catch (ClassNotFoundException ex) {
         System.out.println(ex);
         return;
